# BurnForge

./: .gitignore  223_80_8208.txt  65CRM_130SMK_N150_Starline_Initial.grtload  AGENTS.md  DATABASE_AND_FITTING_ANALYSIS.md  DIRECTORY_RESTRUCTURE.md  PHASE1_COMPLETE.md  PHYSICS_V3_COMPLETE.md  README.md  SESSION_SUMMARY_2024-12-24.md  TODO.md  analyze_fit.py  ballistics_data.db  compare_legacy.py  create_database.py  database_schema.sql  database_schema_migration_alpha.sql  database_schema_migration_extended.sql  database_schema_migration_geometry.sql  database_schema_migration_heat_loss_v2.sql  database_schema_migration_physics_v3.sql  diagnose_physics_v3.py  fit_results.json  fit_vivacity.py  gemini_workflow.py  geminicli.md  plot_fit_diagnostics.py  prompt.md  pyproject.toml  quick_fit_analysis.py  status-summary.md  summary.md  temp_analyze.py  test_better_fitting.py  test_bias_analysis.py  test_hybrid_fitting.py
archive/: plot_vivacity.py  solver.py
data/: ballistics_data.db
docs/: BIAS_ANALYSIS_REPORT.md  BUGFIX.md  DATABASE_FIX_COMPLETE.md  DATABASE_FIX_GUIDE.md  DEPENDENCIES.md  DIRECTORY_STRUCTURE.md  PHYSICS_VALIDATION.md  PROJECT_GOALS.md  README.md  WORKFLOW.md  troubleshooting.md
research/: propellant_grain_data.md
scripts/: migrate_database.py  test_sequential_fitting.py
tests/: check_grt.py  check_prop.py  check_propellant_db.py  debug_fitting.py  debug_optimizer.py  scan_force.py  scan_lambda.py  test_analysis.py  test_better_fitting.py  test_cli.py  test_database_integrity.py  test_fitting.py  test_io.py  test_physics_validation.py  (+2 more)
(+58 files in other folders)
